@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-05T16:22:51Z",
-  "count_outdated" : 431,
-  "uniques_outdated" : 249,
-  "count" : 466,
-  "uniques" : 267,
+  "timestamp" : "2022-08-06T01:14:48Z",
+  "count_outdated" : 433,
+  "uniques_outdated" : 250,
+  "count" : 470,
+  "uniques" : 268,
   "clones" : [
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 3,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-08-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
