@@ -1,12 +1,7 @@
 {
-  "count": 35,
-  "uniques": 4,
+  "count": 37,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 3,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-08-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
